--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
     "prisma": "^6.11.1",
+    "resend": "^6.6.0",
     "stripe": "^19.1.0",
     "uuid": "^11.1.0",
     "zod": "^4.0.3"
